<resources>
    <string name="app_name">GeoTime</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Pin</string>
    <string name="conectar">Conectar</string>
    <string name="error_ocurred">Ha ocurrido un error</string>
    <string name="error_login">Usuario y/o contraseña incorrectos</string>
    <string name="error_autenticacion">Ha ocurrido un error en la autenticación</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="trabajado">TRABAJADO</string>
    <string name="hora_salida">HORA SALIDA</string>
    <string name="descansado">DESCANSADO</string>
    <string name="total_semana">TOTAL SEMANA</string>
    <string name="horas_trabajadas">HORAS TRABAJADAS</string>
    <string name="horas_restantes">HORAS RESTANTES</string>
    <string name="tiempo_restante">TIEMPO RESTANTE</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="horario">Horario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rango">Rango</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="informe">Informe</string>
    <string name="hasta">Hasta:</string>
    <string name="desde">Desde:</string>
    <string name="dias_trabajados">DÍAS TRABAJADOS</string>
    <string name="objetivo_horas">OBJETIVO HORAS</string>
    <string name="diferencia_horas">DIFERENCIA HORAS</string>
    <string name="principal">Principal</string>
    <string name="descanso">Descanso</string>
    <string name="salir">Salir</string>
    <string name="regreso">Regresar</string>
    <string name="comenzar">Entrar</string>
    <string name="esta_seguro">¿Está seguro?</string>
</resources>
