<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator"
    tools:context=".LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaLogo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/img_central"
        android:layout_marginTop="35dp"
        android:scaleType="centerInside"
        android:src="@drawable/intratime"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/correo_layout"
        android:layout_marginTop="25dp"
        android:theme="@style/LoginTextLabel"
        android:layout_above="@+id/passLayout"
        android:textColorHint="@color/blanco"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/blanco" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passLayout"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:theme="@style/LoginTextLabel"
        android:layout_above="@+id/btn_conectar"
        android:textColorHint="@color/blanco"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/blanco"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_conectar"
        android:text="@string/conectar"
        android:onClick="conectar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:background="@color/blanco"
        android:textColor="@color/naranjaIntratime"/>
</RelativeLayout>



</android.support.design.widget.CoordinatorLayout>